# unicodefyi

./: .gitignore  LICENSE  README.md  SKILL.md  demo.tape  pyproject.toml  server.json  smithery.yaml
skills/unicode-tools/: SKILL.md
src/unicodefyi/: __init__.py  api.py  cli.py  engine.py  mcp_server.py
tests/: test_api.py  test_cli.py  test_mcp.py  test_unicodefyi.py
