[project]
name = "unicodefyi"
version = "0.1.0"
description = "Pure Python Unicode character toolkit — 17 encoding formats, full Unicode properties, 90 HTML entities, character search."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "FYIPedia" }]
keywords = ["unicode", "character", "encoding", "codepoint", "utf8", "utf16", "utf32", "html-entity", "block", "script"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Text Processing :: General",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
full = ["fonttools>=4.50"]

[project.urls]
Homepage = "https://unicodefyi.com"
Documentation = "https://unicodefyi.com/developers/"
Repository = "https://github.com/fyipedia/unicodefyi"
Issues = "https://github.com/fyipedia/unicodefyi/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/unicodefyi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["RUF022"]

[tool.mypy]
python_version = "3.10"
strict = true

[dependency-groups]
dev = [
    "fonttools>=4.50",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]
