[project]
name = "unicodefyi"
version = "0.2.0"
description = "Pure Python Unicode character toolkit -- 17 encoding formats, full Unicode properties, 92 HTML entities, character search, CLI, MCP server, and REST API client."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "FYIPedia" }]
keywords = [
    "unicode",
    "character",
    "encoding",
    "codepoint",
    "utf8",
    "utf16",
    "utf32",
    "html-entity",
    "block",
    "script",
    "unicode-lookup",
    "character-search",
    "unicode-toolkit",
    "mcp-server",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Text Processing :: General",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Environment :: Console",
]
dependencies = []

[project.optional-dependencies]
full = ["fonttools>=4.50"]
api = ["httpx>=0.27"]
cli = ["typer>=0.15", "rich>=13.0"]
mcp = ["mcp>=1.0"]
all = ["unicodefyi[full,api,cli,mcp]"]

[project.scripts]
unicodefyi = "unicodefyi.cli:app"

[project.entry-points."mcp.servers"]
unicodefyi = "unicodefyi.mcp_server:mcp"

[project.urls]
Homepage = "https://unicodefyi.com"
"Unicode Search" = "https://unicodefyi.com/search/"
"Unicode Blocks" = "https://unicodefyi.com/block/"
Documentation = "https://unicodefyi.com/developers/"
Repository = "https://github.com/fyipedia/unicodefyi"
Issues = "https://github.com/fyipedia/unicodefyi/issues"
Changelog = "https://github.com/fyipedia/unicodefyi/releases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/unicodefyi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["RUF022"]

[tool.mypy]
python_version = "3.10"
strict = true

[dependency-groups]
dev = [
    "fonttools>=4.50",
    "httpx>=0.27",
    "mcp>=1.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "rich>=13.0",
    "ruff>=0.15.4",
    "typer>=0.15",
]
